--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 sudo: required
+branches:
+  only:
+  - develop
 services:
   - docker
 
 before_install:
-  - docker build -t test -f ./client/Dockerfile.dev .
+  - docker build -t test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true test npm run test
