--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -10,4 +10,4 @@ FROM nginx
 EXPOSE 3000
 WORKDIR /usr/app
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /build /usr/share/nginx/html
+COPY --from=builder /usr/app/build /usr/share/nginx/html
